<resources>
    <string name="app_name">final</string>
    <string name="number_input">Number phone</string>
    <string name="password_input">Password</string>
    <string name="login_title">Sign In</string>
    <string name="login_btn">Sign In</string>
    <string name="login_info">Log in with your data that you entered during your registration</string>
    <string name="forgot_password_btn">Forgot Password ?</string>
    <string name="login_screen_register">Dont have an account? Register</string>


    <!--    passcodePage-->
    <string name="Verification">Verification</string>
    <string name="VerificationDetails">Enter the verification code we just sent you on your mobile</string>
    <string name="confirm_btn">Confirm</string>
    <string name="didntReceiveCode"> Didnt receive the code?</string>
    <string name="Resend">Resend</string>

    <!--    dashboard-->
    <string name="recent_actions">Recent actions</string>

    <!--    addAction-->
    <string name="sum_input">Amount</string>
    <string name="title_input">Action name</string>
    <string name="details_input">Details</string>

    <!--    settings-->
    <string name="logoutBtn">Logout</string>
    <string name="settings">Settings</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>


    <!--    register-->
    <string name="register_title">Create account</string>
    <string name="register_info">Log in with your data that you entered during your registration</string>
    <string name="repassword">Re-type Password</string>
    <string name="sign_up">Sign up</string>
    <string name="register_have_account">Already have an account? Sign in</string>


    <!--    forget password-->
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_info">We will send 4 digits code to your mobile number</string>
    <string name="send_code">Send Code</string>

    <!--    reset password-->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_info">Your new password must be different from previous used password</string>
    <string name="update_password">Update Password</string>
</resources>