<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:id="@+id/login_container"
        android:background="@color/snow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:text="@string/login_title"
            android:gravity="center_horizontal|bottom"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/cairo_regular"
            />
        <TextView
            android:layout_width="match_parent"
            android:paddingHorizontal="40dp"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/login_info"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/cairo_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:weightSum="1"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/number_input"
                app:startIconDrawable="@drawable/smartphone"

                app:startIconContentDescription="email"
                android:layout_marginVertical="20dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_mobile"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/password_input"
                app:startIconDrawable="@drawable/lock"
                app:startIconContentDescription="lock"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/forgot_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:text="@string/forgot_password_btn"
                android:gravity="end|center_vertical"
                android:fontFamily="@font/cairo_medium"
                android:textColor="@color/text_color_green_with_hover"
                />
            <TextView
                android:id="@+id/sign_in_btn"
                android:text="@string/login_btn"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:fontFamily="@font/cairo_medium"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:letterSpacing="0.02"
                android:gravity="center"
                android:background="@drawable/button_onclick_ui"
                android:clickable="true" />

        </LinearLayout>
        <TextView
            android:id="@+id/to_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:clickable="true"
            android:text="@string/login_screen_register"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/cairo_medium"
            android:textColor="@color/text_color_green_with_hover"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
