<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updatePassword">

    <LinearLayout
        android:id="@+id/update_pass_con"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="@color/snow"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/reset_password"
            android:fontFamily="@font/cairo_bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:letterSpacing="0.01"
            android:gravity="center|bottom"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center|top"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:textColor="@color/gray"
            android:fontFamily="@font/cairo_medium"
            android:lineHeight="25sp"
            android:paddingHorizontal="30dp"
            android:text="@string/reset_password_info"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password_update"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            android:hint="@string/password_input"
            app:startIconDrawable="@drawable/lock"
            app:startIconContentDescription="lock"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password_update"
                android:fontFamily="@font/cairo_medium"
                android:textSize="15sp"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_repassword_update"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            android:hint="@string/repassword"
            app:startIconDrawable="@drawable/lock"
            app:startIconContentDescription="lock"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_repassword_update"
                android:fontFamily="@font/cairo_medium"
                android:textSize="15sp"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/update_passBtn"
            android:layout_marginTop="15dp"
            android:text="@string/update_password"
            android:fontFamily="@font/cairo_medium"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/button_onclick_ui"
            android:clickable="true"
            android:layout_height="0dp"
            android:layout_weight="0.06"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>