<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <LinearLayout
        android:id="@+id/register_container"
        android:background="@color/snow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.16"
        android:text="@string/register_title"
        android:gravity="center_horizontal|bottom"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cairo_regular"
        />
    <TextView
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/register_info"
        android:gravity="center|top"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cairo_regular"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:weightSum="1.1">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_firstName_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/firstName"
                app:startIconDrawable="@drawable/person"
                app:startIconContentDescription="person"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_firstName_register"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_lastName_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/lastName"
                app:startIconDrawable="@drawable/person"
                app:startIconContentDescription="person"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_lastName_register"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mobile_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/number_input"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/smartphone"
                app:startIconContentDescription="mobile"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_mobile_register"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:maxLength="10"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/password_input"
                app:startIconDrawable="@drawable/lock"
                app:startIconContentDescription="lock"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password_register"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_repassword_register"
                android:layout_width="match_parent"

                android:layout_height="0dp"
                android:layout_weight="0.18"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/repassword"
                app:startIconDrawable="@drawable/lock"
                app:startIconContentDescription="lock"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_repassword_register"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/sendActionBtn"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:fontFamily="@font/cairo_medium"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:letterSpacing="0.02"
                android:gravity="center"
                android:background="@drawable/button_onclick_ui"
                android:clickable="true"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/to_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:clickable="true"
            android:text="@string/register_have_account"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/cairo_medium"
            android:textColor="@color/text_color_green_with_hover"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>