<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsFragment">

    <LinearLayout
        android:id="@+id/container_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingHorizontal="10dp"
            android:background="@color/silver">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:fontFamily="@font/cairo_bold"
                android:textSize="18sp"
                android:gravity="center|start"
                android:text="@string/settings"/>
            <TextView
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo_medium"
                android:textSize="16sp"
                android:textColor="@color/text_color_blue_with_hover"
                android:layout_weight="0.2"
                android:gravity="center|end"
                android:clickable="true"
                android:text="@string/logoutBtn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.92"
            android:gravity="center"
            android:weightSum="1"
            android:padding="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_firstName_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.12"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/firstName"
                android:layout_marginVertical="20dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_firstName_settings"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_lastName_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.12"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                android:hint="@string/lastName"
                android:layout_marginVertical="20dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_lastName_settings"
                    android:fontFamily="@font/cairo_medium"
                    android:textSize="15sp"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/update_account_settings"
                android:text="@string/confirm_btn"
                android:fontFamily="@font/cairo_medium"
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:letterSpacing="0.02"
                android:gravity="center"
                android:background="@drawable/button_onclick_ui"
                android:clickable="true"
                android:layout_height="0dp"
                android:layout_weight="0.08"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>