<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passcode">
    <LinearLayout
        android:id="@+id/Passcode_container"
        android:background="@color/snow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.4"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="0.5"
                android:text="@string/Verification"
                android:gravity="center|bottom"
                android:fontFamily="@font/cairo_semibold"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:paddingHorizontal="50dp"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:fontFamily="@font/cairo_medium"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:text="@string/VerificationDetails"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center|top"
                android:fontFamily="@font/cairo_medium"
                android:textColor="@color/blue" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/passCodeEd1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:textSize="25dp"
                android:background="@color/silver"
                android:layout_marginHorizontal="15dp"/>
            <EditText
                android:id="@+id/passCodeEd2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:textSize="25dp"
                android:background="@color/silver"
                android:layout_marginHorizontal="15dp"/>
            <EditText
                android:id="@+id/passCodeEd3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:textSize="25dp"
                android:background="@color/silver"
                android:layout_marginHorizontal="15dp"/>
            <EditText
                android:id="@+id/passCodeEd4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:textSize="25dp"
                android:background="@color/silver"
                android:layout_marginHorizontal="15dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/errorPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/red"/>
        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:fontFamily="@font/cairo_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/button_onclick_ui"
            android:clickable="true"
            android:text="@string/confirm_btn" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.4"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/cairo_regular"
                android:letterSpacing="0.02"
                android:text="@string/didntReceiveCode"/>
            <TextView
                android:id="@+id/resend_btn"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/cairo_medium"
                android:letterSpacing="0.02"
                android:drawableLeft="@drawable/resend"

                android:drawablePadding="7dp"
                android:text="@string/Resend"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>